# birmenstorf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_consumer.md  README_producted.md
.github/workflows/: cmake-multi-platform.yml
dectris_data_consumer/: CMakeLists.txt  DectrisStream2Demo_windows.c  DectrisStream2Receiver_linux.c  README.md  acquire_and_save_stream.c  average_images.cpp  data_analysis_pipeline_example.cpp  inpaint_images.cpp  normalize_images.cpp  stream2_bifurcator.c  stream2_buffer.c  stream2_buffer_decode.c
dectris_data_consumer/src/: stream2_buffer_decode_stack.c  stream2_buffer_decode_stack.h  stream2_common.c  stream2_image_buffer.c  stream2_image_buffer.h  stream2_stats.h  tiff_warning_filter.cpp  tiff_warning_filter.h
dectris_detector_control/: Makefile  README.md
dectris_detector_control/cpp/: connect_and_configure_and_arm_detector.cpp  disarm_detector.cpp  eiger_client.cpp  eiger_client.h  send_software_trigger.cpp
dectris_detector_control/python/: simple_acquisition_with_stream2.py
dectris_detector_control_demo/: Makefile  README.md
dectris_detector_control_demo/cpp/: connect_and_configure_and_arm_detector.cpp  eiger_session.hpp  simple_acquisition_with_stream2.cpp  software_trigger_detector.cpp  wait_idle_and_disarm_detector.cpp
dectris_detector_control_demo/python/: simple_acquisition_with_stream2.py
eiger_client_demo/: .gitignore  README.md
eiger_client_demo/cpp/: eiger_client.cpp  eiger_session.hpp  simple_acquisition_with_stream2.cpp
eiger_client_demo/python/: simple_acquisition_with_stream2.py
eiger_client_demo/python/DEigerClient/: DEigerClient.py
example_dataset/: .gitattributes  bad_pixel_mask.tiff  flatfield.tiff  flatfield_processed.tiff
example_dataset/original/: stream2_threshold_1_000003.tiff  stream2_threshold_1_000010.tiff  stream2_threshold_1_000012.tiff  stream2_threshold_1_000020.tiff  stream2_threshold_1_000021.tiff  stream2_threshold_1_000029.tiff  stream2_threshold_1_000038.tiff  stream2_threshold_1_000043.tiff  stream2_threshold_1_000047.tiff  stream2_threshold_1_000048.tiff  stream2_threshold_1_000060.tiff  stream2_threshold_1_000061.tiff  stream2_threshold_1_000064.tiff  stream2_threshold_1_000067.tiff  stream2_threshold_1_000072.tiff  stream2_threshold_1_000073.tiff  stream2_threshold_1_000074.tiff  stream2_threshold_1_000077.tiff  stream2_threshold_1_000078.tiff  stream2_threshold_1_000080.tiff  stream2_threshold_1_000081.tiff  stream2_threshold_1_000082.tiff  stream2_threshold_1_000089.tiff  stream2_threshold_1_000092.tiff  stream2_threshold_1_000095.tiff
example_datasets/: .gitattributes  stream2_threshold_1_000000.tiff  stream2_threshold_1_000004.tiff  stream2_threshold_1_000006.tiff  stream2_threshold_1_000007.tiff  stream2_threshold_1_000011.tiff  stream2_threshold_1_000015.tiff  stream2_threshold_1_000016.tiff  stream2_threshold_1_000017.tiff  stream2_threshold_1_000018.tiff  stream2_threshold_1_000019.tiff  stream2_threshold_1_000022.tiff  stream2_threshold_1_000023.tiff  stream2_threshold_1_000024.tiff  stream2_threshold_1_000025.tiff  stream2_threshold_1_000026.tiff  stream2_threshold_1_000027.tiff  stream2_threshold_1_000030.tiff  stream2_threshold_1_000034.tiff  stream2_threshold_1_000036.tiff  stream2_threshold_1_000037.tiff  stream2_threshold_1_000039.tiff  stream2_threshold_1_000040.tiff  stream2_threshold_1_000041.tiff  stream2_threshold_1_000042.tiff  stream2_threshold_1_000045.tiff  stream2_threshold_1_000049.tiff  stream2_threshold_1_000050.tiff  stream2_threshold_1_000051.tiff  stream2_threshold_1_000052.tiff  stream2_threshold_1_000053.tiff  stream2_threshold_1_000055.tiff  stream2_threshold_1_000056.tiff  stream2_threshold_1_000057.tiff  stream2_threshold_1_000059.tiff  stream2_threshold_1_000062.tiff  stream2_threshold_1_000065.tiff  stream2_threshold_1_000068.tiff  stream2_threshold_1_000069.tiff  stream2_threshold_1_000070.tiff  (+14 more)
example_datasets/dataset/: stream2_threshold_1_000001.tiff  stream2_threshold_1_000002.tiff  stream2_threshold_1_000005.tiff  stream2_threshold_1_000008.tiff  stream2_threshold_1_000009.tiff  stream2_threshold_1_000013.tiff  stream2_threshold_1_000014.tiff  stream2_threshold_1_000028.tiff  stream2_threshold_1_000031.tiff  stream2_threshold_1_000032.tiff  stream2_threshold_1_000033.tiff  stream2_threshold_1_000035.tiff  stream2_threshold_1_000044.tiff  stream2_threshold_1_000046.tiff  stream2_threshold_1_000054.tiff  stream2_threshold_1_000058.tiff  stream2_threshold_1_000063.tiff  stream2_threshold_1_000066.tiff  stream2_threshold_1_000071.tiff  stream2_threshold_1_000090.tiff  stream2_threshold_1_000091.tiff  stream2_threshold_1_000094.tiff
src/: acquire_and_save_stream.c  stream2_generic_receiver.c  wait_idle_and_disarm_detector.cpp
src/data_consumer/: CMakeLists.txt  stream2_common.h  stream2_decompress.c  tiff_writer.c  tiff_writer.h
src/detector_control/: CMakeLists.txt  Makefile  cmake_install.cmake
src/python/: acquire_images_DEigerClient.py  acquire_images_DEigerClient_simpleStream.py  get_and_set_flatfield.py  get_flatfield_simple.py  inpainting_simplified.py  live_viewer.py  live_viewer_MAC.py  live_viewer_WIN.py  process_flatfield.py  requirements.txt  roundtrip_flatfield_simple.py  set_flatfield_on_dcu.py  start_stream_eigerclient.py  stream_receiver.py
src/python/hdf5_files/: download_hdf5.py
stream_v2/examples/: CMakeLists.txt  README.md  stream2_bifurcator.c
stream_v2/examples/src/: stream2_common.h  stream2_decompress.h  stream2_image_buffer.h  stream2_stats.c  tiff_writer.c  tiff_writer.h
